# Y

./: .gitignore  .ysu_hw_profile  Cargo.toml  LICENSE  README.md  README_BENCHMARKS.md  SS_LANGUAGE_DESIGN.txt  Y_Lang_Specification.md  ast.rs  benchmark_results.md  booledass_architecture.md  bvh_test.c  bvh_test.ll  c_emitter.rs  clang_err.txt  compiler.c  compiler.ll  compiler.ysu  compiler.yy  compiler_fixed.c  compiler_fixed.ll  coprocessor_benchmark_comparison.md  coprocessor_comparison_report.md  coprocessor_summary.md  dot_product.circom  dot_product.ysu  fix_c.py  heavy_31m.ysu  heavy_circuit.circom  heavy_circuit.ysu  hello.ll  implementation_plan.md  install.sh  keywords.json  lexer.rs  lexer.yy  lib.c  llvm_emitter.rs  llvm_emitter.rs.orig  main.rs  (+28 more)
algorithms/: matching.c  matching.ysu
build_artifacts/: clang_err.txt  compiler.ll  compiler_fixed.ll  compiler_full.ll  compiler_self.ll  hello.ll  hi.ll  llvm_emitter.rs.orig  output.ll  output_old.ll  patch_gep_fix20.diff  patch_infer_ast.diff  patch_infer_type.diff  patch_last.diff  patch_remove_debug.diff  self_out.txt  temp_spec.txt  test_program.ll  tmp_emitter.txt  y_compiler.ll
c_src/: compiler.c  compiler_fixed.c  gdt.c  gdt.h  hello.c  hi.c  kernel.c  lexer.c  lexer_out.c  lib.c  output.c  parser.c  shadowplay_gui.h  test_enum.c  test_escape.c  test_output.c  ylang_self.c  ysu_hammer.cu  ysu_shm_portal.c  ysu_shm_portal.h
docs/: Y_Lang_Specification.md  heavy_circuit_speed_test.md  implementation_plan.md  y_vs_circom_comparison.md  ysu_sentinel_cache_blueprint.md
kanji/: install_kanji.sh
(+118 files in other folders)
