[package]
name = "Y-compiler"
version = "0.1.0"
edition = "2021"
description = "Prototype Y compiler with CPU, PTX, C, and LLVM backends."

[lib]
name = "y"
path = "src/lib.rs"

[[bin]]
name = "Y"
path = "src/main.rs"

[[bin]]
name = "ysu_gpu_probe"
path = "src/ysu_gpu_probe.rs"

[[bin]]
name = "ypm"
path = "src/ypm.rs"

[[bin]]
name = "ysu_vmm"
path = "y_os/ysu_vmm/main.rs"

[dependencies]

